--- a/config/20.7/extras.conf
+++ b/config/20.7/extras.conf
@@ -14,6 +14,34 @@ arm_hook()
 {
 	loader_conf_fixup ${1}
 
+	cat > ${1}/tmp/arm.xml << EOF
+    <use_mfs_tmp/>
+    <use_mfs_var/>
+    <serialspeed>${PRODUCT_SPEED}</serialspeed>
+    <primaryconsole>video</primaryconsole>
+    <secondaryconsole>serial</secondaryconsole>
+EOF
+	sed -i '' -e "/<system>/r ${1}/tmp/arm.xml" ${1}${CONFIG_XML}
+	rm ${1}/tmp/arm.xml
+
+	sed -i '' -e '/<rrd>/,/<\/rrd>/d' ${1}${CONFIG_XML}
+
+	echo "-S${PRODUCT_SPEED} -D" > ${1}/boot.config
+
+	cat >> ${1}/boot/loader.conf << EOF
+beastie_disable="YES"
+verbose_loading="YES"
+comconsole_speed="${PRODUCT_SPEED}"
+console="comconsole,vidconsole"
+boot_multicons="YES"
+boot_serial="YES"
+usb_load="YES"
+ugen_load="YES"
+uhid_load="YES"
+ukbd_load="YES"
+umass_load="YES"
+EOF
+
 	touch ${1}/.probe.for.growfs.nano
 }
 
