update RPI3.conf for build from arm64

--- a/device/RPI3.conf
+++ b/device/RPI3.conf
@@ -2,14 +2,13 @@
 # https://www.raspberrypi.org/products/raspberry-pi-3-model-b-plus/
 
 export MAKE_ARGS_DEV="
-CROSS_BINUTILS_PREFIX=/usr/local/aarch64-unknown-freebsd12.1/bin
 UBLDR_LOADADDR=0x42000000
 "
 
 export PRODUCT_KERNEL=SMP-ARM
 export PRODUCT_TARGET=arm64
 export PRODUCT_ARCH=aarch64
-export PRODUCT_WANTS="aarch64-binutils qemu-user-static u-boot-rpi3 rpi-firmware"
+export PRODUCT_WANTS="u-boot-rpi3 rpi-firmware"
 
 export ARM_FIRMWARE_DIR="/usr/local/share/rpi-firmware"
 export ARM_UBOOT_DIR="/usr/local/share/u-boot/u-boot-rpi3"
