--- a/config/21.1/plugins.conf
+++ b/config/21.1/plugins.conf
@@ -1,77 +1,77 @@
 #ORIGIN						IGNORE
-benchmarks/iperf				arm,arm64
-databases/redis					arm,arm64
-devel/debug					arm,arm64
+benchmarks/iperf
+databases/redis
+devel/debug
 devel/grid_example
 devel/helloworld
-dns/bind					arm,arm64
-dns/dnscrypt-proxy				arm,arm64
+dns/bind
+dns/dnscrypt-proxy
 dns/dyndns
 dns/rfc2136
-mail/postfix					arm,arm64
-mail/rspamd					arm,arm64
+mail/postfix
+mail/rspamd
 misc/theme-cicada
 misc/theme-rebellion
 misc/theme-tukan
 misc/theme-vicuna
-net-mgmt/collectd				arm,arm64
+net-mgmt/collectd
 net-mgmt/lldpd					arm,arm64
-net-mgmt/net-snmp				arm,arm64
-net-mgmt/netdata				arm,arm64
-net-mgmt/nrpe					arm,arm64
-net-mgmt/telegraf				arm,arm64
-net-mgmt/zabbix-agent				arm,arm64
+net-mgmt/net-snmp
+net-mgmt/netdata
+net-mgmt/nrpe
+net-mgmt/telegraf
+net-mgmt/zabbix-agent
 net-mgmt/zabbix4-proxy				arm,arm64
-net-mgmt/zabbix5-proxy				arm,arm64
-net/chrony					arm,arm64
+net-mgmt/zabbix5-proxy
+net/chrony
 net/firewall
-net/freeradius					arm,arm64
-net/frr						arm,arm64
+net/freeradius
+net/frr
 net/ftp-proxy
-net/google-cloud-sdk				arm,arm64
+net/google-cloud-sdk
 net/haproxy					arm,arm64
 net/igmp-proxy
 net/mdns-repeater
-net/ntopng					arm,arm64
-net/relayd					arm,arm64
-net/shadowsocks					arm,arm64
-net/siproxd					arm,arm64
-net/tayga					arm,arm64
-net/udpbroadcastrelay				arm,arm64
+net/ntopng
+net/relayd
+net/shadowsocks
+net/siproxd
+net/tayga
+net/udpbroadcastrelay
 net/upnp
-net/vnstat					arm,arm64
-net/wireguard					arm,arm64
+net/vnstat
+net/wireguard
 net/wol
-net/zerotier					arm,arm64
+net/zerotier
 security/acme-client
-security/clamav					arm,arm64
+security/clamav
 security/etpro-telemetry
 security/intrusion-detection-content-et-pro
 security/intrusion-detection-content-pt-open
 security/intrusion-detection-content-snort-vrt
-security/maltrail				arm,arm64
-security/openconnect				arm,arm64
+security/maltrail
+security/openconnect
 security/softether				arm,arm64
-security/stunnel				arm,arm64,LibreSSL
-security/tinc					arm,arm64
-security/tor					arm,arm64
+security/stunnel				LibreSSL
+security/tinc
+security/tor
 sysutils/api-backup
-sysutils/apuled					arm,arm64
+sysutils/apuled
 sysutils/boot-delay
-sysutils/dmidecode				arm,arm64
+sysutils/dmidecode
 sysutils/git-backup
-sysutils/hw-probe				arm,arm64
+sysutils/hw-probe
 sysutils/lcdproc-sdeclcd			arm,arm64
-sysutils/munin-node				arm,arm64
-sysutils/node_exporter				arm,arm64
-sysutils/nut					arm,arm64
-sysutils/smart					arm,arm64
+sysutils/munin-node
+sysutils/node_exporter
+sysutils/nut
+sysutils/smart
 sysutils/virtualbox				arm,arm64
 sysutils/vmware					arm,arm64
 sysutils/xen					arm,arm64
 vendor/sunnyvalley				arm,arm64
-www/c-icap					arm,arm64
+www/c-icap
 www/cache
-www/nginx					arm,arm64
-www/web-proxy-sso				arm,arm64
+www/nginx
+www/web-proxy-sso
 www/web-proxy-useracl
