--- a/config/21.1/ports.conf
+++ b/config/21.1/ports.conf
@@ -1,23 +1,23 @@
 #ORIGIN						IGNORE
 archivers/php${PRODUCT_PHP}-zlib
-archivers/snappy				arm,arm64
+archivers/snappy
 archivers/zip
 audio/beep					arm,arm64
-benchmarks/iperf3				arm,arm64
-benchmarks/stress-ng				arm,arm64
-comms/gnokii					arm,arm64
-converters/php${PRODUCT_PHP}-mbstring		arm,arm64
-databases/hiredis				arm,arm64
-databases/pecl-mongodb				arm,arm64
-databases/php${PRODUCT_PHP}-mysqli		arm,arm64
+benchmarks/iperf3
+benchmarks/stress-ng				arm64
+comms/gnokii
+converters/php${PRODUCT_PHP}-mbstring
+databases/hiredis
+databases/pecl-mongodb
+databases/php${PRODUCT_PHP}-mysqli
 databases/php${PRODUCT_PHP}-sqlite3
-databases/py-redis@py${PRODUCT_PYTHON}          arm,arm64
+databases/py-redis@py${PRODUCT_PYTHON}
 databases/py-sqlite3@py${PRODUCT_PYTHON}
-databases/pymongo				arm,arm64
-databases/redis					arm,arm64
+databases/pymongo
+databases/redis
 databases/rrdtool
 devel/automake
-devel/awscli					arm,arm64
+devel/awscli
 devel/bison
 devel/cmake
 devel/gdb
@@ -28,10 +28,10 @@ devel/git
 devel/gmake
 devel/libtool
 devel/ninja
-devel/p5-File-Slurp				arm,arm64
-devel/p5-Locale-Maketext-Lexicon		arm,arm64
+devel/p5-File-Slurp
+devel/p5-Locale-Maketext-Lexicon
 devel/patch
-devel/pear-PHP_CodeSniffer@php${PRODUCT_PHP}	arm,arm64
+devel/pear-PHP_CodeSniffer@php${PRODUCT_PHP}
 devel/pecl-xdebug
 devel/php${PRODUCT_PHP}-gettext
 devel/php${PRODUCT_PHP}-json
@@ -42,13 +42,13 @@ devel/py-pycodestyle@py${PRODUCT_PYTHON}
 devel/py-ujson@py${PRODUCT_PYTHON}
 devel/scons
 dns/bind-tools
-dns/bind916					arm,arm64
-dns/ddclient					arm,arm64
-dns/dnscrypt-proxy2				arm,arm64
+dns/bind916
+dns/ddclient
+dns/dnscrypt-proxy2
 dns/dnsmasq
-dns/getdns					arm,arm64
-dns/maradns					arm,arm64
-dns/powerdns-recursor				arm,arm64
+dns/getdns
+dns/maradns
+dns/powerdns-recursor				arm64
 dns/py-dns-lexicon@py${PRODUCT_PYTHON}
 dns/py-dnspython@py${PRODUCT_PYTHON}
 dns/unbound
@@ -60,90 +60,88 @@ emulators/open-vm-tools-nox11			arm,arm64
 emulators/virtualbox-ose-additions-nox11	arm,arm64
 ftp/curl
 ftp/php${PRODUCT_PHP}-curl
-ftp/uftp					arm,arm64
-ftp/wget					arm,arm64
-lang/luajit					arm,arm64
+ftp/uftp
+ftp/wget
+lang/luajit					arm64
 lang/perl${PRODUCT_PERL}
 lang/php${PRODUCT_PHP}
 lang/python${PRODUCT_PYTHON}
-lang/ruby${PRODUCT_RUBY}			arm,arm64
-mail/fetchmail					arm,arm64
-mail/pecl-mailparse				arm,arm64
-mail/phpmailer					arm,arm64
-mail/postfix-sasl				arm,arm64
-mail/rspamd					arm,arm64
-mail/smtp-cli					arm,arm64
-math/php${PRODUCT_PHP}-bcmath			arm,arm64
+lang/ruby${PRODUCT_RUBY}
+mail/fetchmail
+mail/pecl-mailparse
+mail/phpmailer
+mail/postfix-sasl
+mail/rspamd
+mail/smtp-cli
+math/php${PRODUCT_PHP}-bcmath
 misc/getopt
-misc/gnu-watch					arm,arm64
+misc/gnu-watch
 misc/help2man
-misc/mc-nox11					arm,arm64
-net-im/py-telepot@py${PRODUCT_PYTHON}		arm,arm64
-net-mgmt/bandwidthd				arm,arm64
-net-mgmt/bwm-ng					arm,arm64
+misc/mc-nox11
+net-im/py-telepot@py${PRODUCT_PYTHON}
+net-mgmt/bandwidthd
+net-mgmt/bwm-ng
 net-mgmt/choparp
-net-mgmt/collectd5				arm,arm64
-net-mgmt/icinga2				arm,arm64
+net-mgmt/collectd5
+net-mgmt/icinga2
 net-mgmt/iftop
 net-mgmt/lldpd					arm,arm64
-net-mgmt/mk-livestatus				arm,arm64
-net-mgmt/net-snmp				arm,arm64
-net-mgmt/netdata				arm,arm64
-net-mgmt/nrpe3					arm,arm64
-net-mgmt/telegraf				arm,arm64
-net-mgmt/yaf					arm,arm64
+net-mgmt/mk-livestatus
+net-mgmt/net-snmp
+net-mgmt/netdata
+net-mgmt/nrpe3
+net-mgmt/telegraf				arm
+net-mgmt/yaf
 net-mgmt/zabbix4-agent				arm,arm64
 net-mgmt/zabbix4-proxy				arm,arm64
-net-mgmt/zabbix5-agent				arm,arm64
-net-mgmt/zabbix5-proxy				arm,arm64
-net/addrwatch					arm,arm64
-net/asterisk16					arm,arm64
-net/bird2					arm,arm64
-net/chrony					arm,arm64
-net/cloud-init@py${PRODUCT_PYTHON}		arm,arm64
+net-mgmt/zabbix5-agent
+net-mgmt/zabbix5-proxy
+net/addrwatch
+net/asterisk16					arm64
+net/bird2
+net/chrony
+net/cloud-init@py${PRODUCT_PYTHON}
 net/dpinger
-net/freeradius3					arm,arm64
-net/freevrrpd					arm,arm64
-net/frr7					arm,arm64
-net/google-cloud-sdk				arm,arm64
-net/haproxy					arm,arm64
-net/haproxy20					arm,arm64
+net/freeradius3
+net/frr7
+net/google-cloud-sdk
+net/haproxy
 net/hostapd
 net/igmpproxy
 net/isc-dhcp44-relay
 net/isc-dhcp44-server
-net/luasocket					arm,arm64
+net/luasocket
 net/mdns-repeater
 net/miniupnpd
 net/mpd5
-net/mtr						arm,arm64
-net/ntopng					arm,arm64
+net/mtr
+net/ntopng
 net/ntp
-net/openldap24-server				arm,arm64
+net/openldap24-server
 net/pecl-radius
 net/php${PRODUCT_PHP}-ldap
-net/php${PRODUCT_PHP}-soap			arm,arm64
+net/php${PRODUCT_PHP}-soap
 net/php${PRODUCT_PHP}-sockets
-net/pimd					arm,arm64
+net/pimd
 net/proxy-suite
 net/py-netaddr@py${PRODUCT_PYTHON}
 net/py-speedtest-cli@py${PRODUCT_PYTHON}
-net/radsecproxy					arm,arm64
+net/radsecproxy
 net/radvd
-net/relayd					arm,arm64
-net/rsync					arm,arm64
+net/relayd
+net/rsync
 net/samplicator
-net/shadowsocks-libev				arm,arm64
-net/siproxd					arm,arm64
+net/shadowsocks-libev
+net/siproxd
 net/sslh
-net/tayga					arm,arm64
-net/udpbroadcastrelay				arm,arm64
-net/v2ray					arm,arm64
-net/vnstat					arm,arm64
-net/wireguard					arm,arm64
+net/tayga
+net/udpbroadcastrelay
+net/v2ray
+net/vnstat
+net/wireguard
 net/wol
-net/zerotier					arm,arm64
-opnsense/bsdinstaller				arm,arm64
+net/zerotier
+opnsense/bsdinstaller
 opnsense/cpustats
 opnsense/dhcp6c
 opnsense/dhcpleases
@@ -156,20 +154,20 @@ opnsense/opnsense-update
 opnsense/pam_opnsense
 opnsense/phpseclib@php${PRODUCT_PHP}
 opnsense/syslogd
-print/cups					arm,arm64
+print/cups
 print/texinfo
 ports-mgmt/pkg
 security/acme.sh
-security/autossh				arm,arm64
+security/autossh
 security/ca_root_nss
-security/clamav					arm,arm64
-security/cyrus-sasl2-gssapi			arm,arm64
+security/clamav
+security/cyrus-sasl2-gssapi
 security/expiretable
-security/fwknop					arm,arm64
-security/gnupg					arm,arm64
-security/maltrail				arm,arm64
-security/nmap					arm,arm64
-security/openconnect				arm,arm64
+security/fwknop
+security/gnupg
+security/maltrail
+security/nmap
+security/openconnect
 security/openssh-portable
 security/openvpn
 security/php${PRODUCT_PHP}-filter
@@ -178,67 +176,67 @@ security/php${PRODUCT_PHP}-openssl
 security/py-fail2ban@py${PRODUCT_PYTHON}
 security/snuffleupagus@php${PRODUCT_PHP}
 security/softether				arm,arm64
-security/sslsplit                               arm,arm64
+security/sslsplit
 security/strongswan
 security/sudo
 security/suricata				arm,arm64
-security/stunnel				arm,arm64,LibreSSL
-security/tinc					arm,arm64
-security/tor					arm,arm64
-security/vault					arm,arm64
-security/wazuh-agent				arm,arm64
+security/stunnel				LibreSSL
+security/tinc
+security/tor
+security/vault					arm
+security/wazuh-agent				arm64
 security/wpa_supplicant
-security/yara					arm,arm64
-sysutils/ansible@py${PRODUCT_PYTHON}		arm,arm64
-sysutils/apcupsd				arm,arm64
-sysutils/beadm					arm,arm64
-sysutils/beats7					arm,arm64
-sysutils/burp					arm,arm64
-sysutils/cciss_vol_status			arm,arm64
-sysutils/consul					arm,arm64
+security/yara
+sysutils/ansible@py${PRODUCT_PYTHON}
+sysutils/apcupsd
+sysutils/beadm
+sysutils/beats7
+sysutils/burp
+sysutils/cciss_vol_status
+sysutils/consul
 sysutils/devcpu-data				arm,arm64
-sysutils/dmidecode				arm,arm64
-sysutils/flashrom				arm,arm64
+sysutils/dmidecode
+sysutils/flashrom				arm64
 sysutils/flock
-sysutils/hw-probe				arm,arm64
-sysutils/iohyve					arm,arm64
-sysutils/ipmitool				arm,arm64
+sysutils/hw-probe
+sysutils/iohyve
+sysutils/ipmitool
 sysutils/lcdproc				arm,arm64
 sysutils/monit
-sysutils/msktutil				arm,arm64
-sysutils/multitail				arm,arm64
-sysutils/munin-node				arm,arm64
-sysutils/node_exporter				arm,arm64
-sysutils/nut					arm,arm64
+sysutils/msktutil
+sysutils/multitail
+sysutils/munin-node
+sysutils/node_exporter
+sysutils/nut
 sysutils/pftop
 sysutils/screen
-sysutils/smartmontools				arm,arm64
+sysutils/smartmontools
 sysutils/sysinfo
 sysutils/syslog-ng
 sysutils/tarsnap
 sysutils/tmux
 sysutils/usb_modeswitch
 sysutils/xe-guest-utilities			arm,arm64
-textproc/jq					arm,arm64
+textproc/jq
 textproc/php${PRODUCT_PHP}-ctype
 textproc/php${PRODUCT_PHP}-dom
 textproc/php${PRODUCT_PHP}-simplexml
 textproc/php${PRODUCT_PHP}-xml
-www/c-icap					arm,arm64
-www/c-icap-modules				arm,arm64
-www/e2guardian					arm,arm64
-www/lightsquid					arm,arm64
+www/c-icap
+www/c-icap-modules
+www/e2guardian
+www/lightsquid
 www/lighttpd
-www/nginx					arm,arm64
+www/nginx
 www/phalcon@php${PRODUCT_PHP}
 www/phalcon4@php${PRODUCT_PHP}
 www/php${PRODUCT_PHP}-opcache
 www/php${PRODUCT_PHP}-session
-www/privoxy					arm,arm64
-www/py-boto3@py${PRODUCT_PYTHON}		arm,arm64
+www/privoxy
+www/py-boto3@py${PRODUCT_PYTHON}
 www/py-requests@py${PRODUCT_PYTHON}
-www/sarg					arm,arm64
+www/sarg
 www/squid
-www/tinyproxy					arm,arm64
-www/webgrind					arm,arm64
+www/tinyproxy
+www/webgrind
 x11-fonts/urwfonts				arm,arm64
